# Inferencia-Causal-para-Humanos

./: README.md  mkdocs.yml  pyproject.toml  refs.bib
docs/: index.md
docs/Fundamentos/: Correlacao-e-Causalidade.md
docs/Fundamentos/Estatística/Correlação/: Pratica.ipynb  Teoria.md
docs/assets/css/: extra.css
docs/javascripts/: windows_event_loop.py
