[project]
name = "inferencia-causal-para-humanos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "mathjax>=0.1.2",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pymdown-extensions>=10.20",
    "python-markdown-math>=0.9",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
